# OKAMI

./: .env.example  .env.production.example  .env.production.ubuntu.example  .env.railway  .gitignore  AGENTS.md  Dockerfile  Dockerfile.monitor  Dockerfile.nextjs  README.md  README.railway.md  UBUNTU_TIMEOUT_FIX.md  UPGRADE_GUIDE.md  __init__.py  api_docs.html  docker-compose.latest.yaml  docker-compose.prod.yaml  docker-compose.yaml  env.example  main.py  okami_logs.txt  pyproject.toml  railway.toml  requirements-latest.txt  requirements.txt  test_okami_system.py
core/: __init__.py  adaptive_evolution.py  embedding_manager.py  evolution_tracker.py  graph_memory_manager.py  guardrail_manager.py  knowledge_graph.py  knowledge_graph_integration.py  knowledge_manager.py  mem0_v2_storage.py  memory_manager.py  vector_store.py
crews/: __init__.py  crew_factory.py
docs/: API_DOCUMENTATION.md  DEPLOYMENT.md  EVOLUTION_SYSTEM.md  MEM0_INTEGRATION.md  TASK_AGENT_ASSIGNMENT.md
evolution/: __init__.py  evolution_callback.py  improvement_applier.py  improvement_parser.py  knowledge_applier.py
guardrails/: __init__.py  response_quality_guardrail.py
knowledge/: error_patterns.txt  evolution_test.md  evolution_test2.md  general.md  general.md.backup  knowledge_loader.py  qdrant_knowledge_source.py  string_knowledge_source_qdrant.py  text_file_knowledge_source_qdrant.py
models/: evolution_output.py
monitoring/: __init__.py  alert_manager.py  claude_monitor.py  claude_quality_monitor.py  metrics_collector.py  requirements.txt
nginx/: nginx.prod.conf
scripts/: apply_improvements_auto.py  apply_improvements_demo.py  apply_improvements_with_crew.py  (+23 more)
(+182 files in other folders)
